--- a/app/templates/doctor/patient/add_patient.html
+++ b/app/templates/doctor/patient/add_patient.html
@@ -99,8 +99,8 @@
                             <option value="" disabled selected></option>
                             <option value="SINGLE">SINGLE</option>
                             <option value="MARRIED">MARRIED</option>
-                            <option value="DIVORCED">DIVORCED</option>
-                            <option value="WIDOWED">WIDOWED</option>
+                            <option value="SEPARATED">SEPARATED</option>
+                            <option value="WIDOW/ER">WIDOW/ER</option>
                         </select>
                     </div>
                     <div class="inputBox gender">
