--- a/app/templates/doctor/patient/patient_record.html
+++ b/app/templates/doctor/patient/patient_record.html
@@ -114,8 +114,8 @@
                             <option value="" disabled selected></option>
                             <option value="SINGLE" {% if patient[5] == "SINGLE" %} selected {% endif %}>SINGLE</option>
                             <option value="MARRIED" {% if patient[5] == "MARRIED" %} selected {% endif %}>MARRIED</option>
-                            <option value="DIVORCED" {% if patient[5] == "DIVORCED" %} selected {% endif %}>DIVORCED</option>
-                            <option value="WIDOWED" {% if patient[5] == "WIDOWED" %} selected {% endif %}>WIDOWED</option>
+                            <option value="SEPARATED" {% if patient[5] == "SEPARATED" %} selected {% endif %}>SEPARATED</option>
+                            <option value="WIDOW/ER" {% if patient[5] == "WIDOW/ER" %} selected {% endif %}>WIDOW/ER</option>
                         </select>
                         <span>CIVIL STATUS</span>
                     </div>
