--- a/app/static/base_style.css
+++ b/app/static/base_style.css
@@ -50,7 +50,7 @@
 /* -------------------------------------------- SIDEBAR -------------------------------------------- */
 .sidenav-bg {
     width: 80px;  
-    height: 700px; 
+    height: 100vh;
     background-color: var(--blueC);
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.3); 
     position: fixed;  
