--- a/app/static/doctor_style.css
+++ b/app/static/doctor_style.css
@@ -22,9 +22,10 @@
 }
 
 .update-icon {
-    top: 43px;
-    width: 45px;
-    left: 1453px;
+    top: 40px;
+    right: 105px;
+    width: 35px;
+    border-radius: 5px;
     z-index: 1;
     position: fixed;
     cursor: pointer;
