Changed the placement of the update icon.

--- a/app/templates/doctor/patient/medical_history.html
+++ b/app/templates/doctor/patient/medical_history.html
@@ -489,7 +489,7 @@
                 <button class="btn-submit" type="submit" id="updateButton" style="display: none;">UPDATE</button>
             </div>
     
-            <img class="update-icon" onclick="enableEdit()" id="editIcon" src="{{ url_for('static', filename='images/Edit-icon.png') }}">
+            <img class="update-icon details" onclick="enableEdit()" id="editIcon" src="{{ url_for('static', filename='images/Edit-icon.png') }}">
         </div>
     </form>
 
