--- a/app/static/doctor_style.css
+++ b/app/static/doctor_style.css
@@ -31,6 +31,10 @@
     cursor: pointer;
 }
 
+.update-icon.details {
+    right: 90px;
+}
+
 .update-icon:active {
     transform: translateY(1px);
 }
