--- a/app/templates/doctor/patient/assessment.html
+++ b/app/templates/doctor/patient/assessment.html
@@ -329,7 +329,7 @@
                 <button class="btn-submit" type="submit" id="updateButton" style="display: none;">SUBMIT</button>
             </div>
 
-            <img class="update-icon" onclick="enableEdit()" id="editIcon" src="{{ url_for('static', filename='images/Edit-icon.png') }}">
+            <img class="update-icon details" onclick="enableEdit()" id="editIcon" src="{{ url_for('static', filename='images/Edit-icon.png') }}">
         
         </div>
     </form>
