--- a/app/static/doctor_style.css
+++ b/app/static/doctor_style.css
@@ -35,6 +35,12 @@
     right: 90px;
 }
 
+.update-icon.test {
+    position: absolute;
+    right: 17px;
+    top: 1515px;
+}
+
 .update-icon:active {
     transform: translateY(1px);
 }
@@ -172,10 +178,6 @@ input, select {
     height: 1570px; 
 }
 
-.patient-bg.report {
-    height: 2000px; 
-}
-
 /* -------------------------------------------- FORM HEADER -------------------------------------------- */
 .med-header.A {
     top: 50px;
@@ -251,6 +253,10 @@ input, select {
     top: 95px;
     left: 65px;
     font-size: 14px;
+}
+
+.subtext.test {
+    top: -30px;
 }
 
 /* -------------------------------------------- CHECKBOXES -------------------------------------------- */
@@ -747,7 +753,7 @@ input, select {
 /* -------------------------------------------- LABORATORY TEST REQUEST -------------------------------------------- */
 /* lab results rows */
 .p_row.rowOne {
-    gap: 30px;
+    gap: 25px;
     margin-top: 160px;
 }
 
@@ -766,7 +772,6 @@ input, select {
     margin-top: 40px;
 }
 
-/* lab results text area */
 .labTest textarea {
     width: 1000px;
     height: 250px;
@@ -850,22 +855,6 @@ input, select {
     margin-bottom: 20px;
     color: var(--blueA);
     font-weight: 900;
-}
-
-/* -------------------------------------------- LABORATORY REPORT -------------------------------------------- */
-.patient-bg.test {
-    width: 1230px;  
-    height: 2000px; 
-}
-
-.lab-result {
-    margin-top: 150px;
-    width: 1000px;
-    margin-right: 30px;
-}
-
-.med-header.labReport {
-    top: 1510px
 }
 
 /* APPOINTMENT */
