--- a/app/static/medtech_style.css
+++ b/app/static/medtech_style.css
@@ -45,6 +45,21 @@
     border-radius: 100%;
 }
 
+#new-notifs {
+    position: absolute;
+    background-color: var(--blueD);
+    width: 15px;
+    height: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    border-radius: 100%;
+    margin-left: 40px;
+    margin-top: 12px;
+    box-shadow: 0 0 1px 3px var(--blueC); 
+}
+
 #mark-all {
     cursor: pointer;
 }
@@ -109,22 +124,6 @@ strong:hover {
     .container {
         margin: 0;
     }
-}
-
-.patient-bg.test {
-    width: 1230px;  
-    height: 3000px; 
-}
-
-/* -------------------------------------------- LABORATORY REPORT -------------------------------------------- */
-.lab-result {
-    margin-top: 150px;
-    width: 1000px;
-    margin-right: 30px;
-}
-
-.med-header.labReport {
-    top: 1510px
 }
 
 /* -------------------------------------------- PATIENT -------------------------------------------- */
