Modified the HTML to display lab results.

--- a/app/templates/doctor/patient/prescription.html
+++ b/app/templates/doctor/patient/prescription.html
@@ -144,7 +144,7 @@
                 <button class="btn-submit" id="submitData" type="button" style="display: none;">SUBMIT</button>
             </div>
 
-            <img class="update-icon" onclick="enableEdit()" id="editIcon" src="{{ url_for('static', filename='images/Edit-icon.png') }}">
+            <img class="update-icon details" onclick="enableEdit()" id="editIcon" src="{{ url_for('static', filename='images/Edit-icon.png') }}">
 
             <button class="print-icon" onclick="window.print()" id="printButton">
                 <img id="editIcon" src="{{ url_for('static', filename='images/Print.png') }}">
