--- a/app/templates/doctor/patient/results.html
+++ b/app/templates/doctor/patient/results.html
@@ -79,7 +79,7 @@
     <form action="{{ url_for('doctor.results') }}">
 
         <!-- LABORATORY TEST -->
-        <div class="patient-bg test">
+        <div class="patient-bg report">
 
             <!-- PATIENT INFORMATION -->
             <div class="med-header A">PATIENT INFORMATION</div>
@@ -587,7 +587,7 @@
             <div class="med-header labReport" id="r_header">LABORATORY REPORT</div>
             <center>
                 <div class="lab-result">
-                    <table cellpadding="5" id="resultTable" class="table table-striped" width="1030px"> 
+                    <table cellpadding="5" id="resultTable" class="table table-striped" style="width: 1020px;"> 
                         <thead>
                             <tr> 
                                 <th>PROCESS NAME</th> 
