--- a/app/templates/medtech/profile.html
+++ b/app/templates/medtech/profile.html
@@ -7,6 +7,8 @@
             <img src="{{ url_for('static', filename='/images/DocCare Logo.png') }}">
         </div>
         <ul>
+            <span class="new-notifs" id="new-notifs" style="display: none;"></span>
+            <div class="notif_card unread" style="display: none;"></div>
             <a href="{{ url_for('medtech.dashboard') }}">
                 <li class="icon-bg">
                     <img src="{{ url_for('static', filename='images/Dashboard.png') }}"> 
@@ -38,4 +40,5 @@
             </li>
         </ul>
     </div>
+
 {% endblock %}
