--- a/app/static/medtech_style.css
+++ b/app/static/medtech_style.css
@@ -7,8 +7,8 @@
 
 /* -------------------------------------------- DASHBOARD -------------------------------------------- */
 .notification-container {
-    width: 1400px;  
-    height: 1000px; 
+    max-width: 100%;  
+    height: 100vh; 
     position: absolute;  
     top: 50px;
     left: 110px;
