Disabled inputs for patient info in lab request.

--- a/app/templates/doctor/patient/results.html
+++ b/app/templates/doctor/patient/results.html
@@ -83,18 +83,21 @@
 
             <!-- PATIENT INFORMATION -->
             <div class="med-header A">PATIENT INFORMATION</div>
-            
+
             <div class="p_row rowOne">
-                <div class="inputBox fullName">
-                    <input type="text" name="fullName" value="{{ labreq[2] }}" disabled>
-                    <span>PATIENT NAME</span>
-                </div>
                 <div class="inputBox labsubject">
                     <input type="text" name="labsubject" value="{{ labreq[3] }}" disabled>
                     <span>TESTING PURPOSE</span>
                 </div>
             </div>
 
+            <div class="p_row rowTwo">
+                <div class="inputBox fullName">
+                    <input type="text" name="fullName" value="{{ labreq[2] }}" disabled>
+                    <span>PATIENT NAME</span>
+                </div>
+            </div>
+            
             <div class="p_row rowTen">
                 <div class="inputBox gender">
                     <select class="gender" name="gender" disabled>
