--- a/app/templates/doctor/patient/labtest_request.html
+++ b/app/templates/doctor/patient/labtest_request.html
@@ -83,35 +83,38 @@
             <div class="med-header A">PATIENT INFORMATION</div>
             
             <div class="p_row rowOne">
-                <div class="inputBox fullName">
-                    <input type="text" name="fullName" value="{{ patient[1] }} {{ patient[2] }} {{ patient[3] }}">
-                    <span>PATIENT NAME</span>
-                </div>
                 <div class="inputBox labsubject">
                     <input type="text" name="labsubject" required>
                     <span>TESTING PURPOSE</span>
                 </div>
             </div>
 
+            <div class="p_row rowTwo">
+                <div class="inputBox fullName">
+                    <input type="text" name="fullName" value="{{ patient[1] }} {{ patient[2] }} {{ patient[3] }}" disabled>
+                    <span>PATIENT NAME</span>
+                </div>
+            </div>
+            
             <div class="p_row rowTen">
                 <div class="inputBox gender">
-                    <span>GENDER</span>
-                    <select class="gender" name="gender">
+                    <select class="gender" name="gender" disabled>
                         <option value="" disabled selected></option>
                         <option value="FEMALE" {% if patient[6] == "FEMALE" %} selected {% endif %}>FEMALE</option>
                         <option value="MALE" {% if patient[6] == "MALE" %} selected {% endif %}>MALE</option>
                     </select>
+                    <span>GENDER</span>
                 </div>
                 <div class="inputBox age">
-                    <input type="text" name="age" value="{{ patient[4] }}">
+                    <input type="text" name="age" value="{{ patient[4] }}" disabled>
                     <span>AGE</span>
                 </div>
                 <div class="inputBox doctorName">
-                    <input type="text" name="doctorName" required>
+                    <input type="text" name="doctorName" value="DOCTOR NAME HERE" disabled>
                     <span>DOCTOR</span>
                 </div>
                 <div class="inputBox dateofRequest">
-                    <input type="text" name="dateofRequest" id="dateofRequest">
+                    <input type="text" name="dateofRequest" id="dateofRequest" disabled>
                     <span>DATE OF REQUEST</span>
                 </div>
             </div>
