--- a/app/templates/medtech/laboratory_test.html
+++ b/app/templates/medtech/laboratory_test.html
@@ -76,13 +76,16 @@
             <div class="med-header A">PATIENT INFORMATION</div>
             
             <div class="p_row rowOne">
-                <div class="inputBox fullName">
-                    <input type="text" name="fullName" value="{{ labreq[2] }}" disabled>
-                    <span>PATIENT NAME</span>
-                </div>
                 <div class="inputBox labsubject">
                     <input type="text" name="labsubject" value="{{ labreq[3] }}" disabled>
                     <span>TESTING PURPOSE</span>
+                </div>
+            </div>
+
+            <div class="p_row rowTwo">
+                <div class="inputBox fullName">
+                    <input type="text" name="fullName" value="{{ labreq[2] }}" disabled>
+                    <span>PATIENT NAME</span>
                 </div>
             </div>
 
